--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   },
   "dependencies": {
     "bootstrap-sass": "^3.0.0",
-    "laravel-elixir": "^4.0.0",
+    "laravel-elixir": "*",
     "laravel-elixir-vueify": "^1.0.0",
+    "laravel-elixir-webpack": "^1.0.1",
     "vue": "^1.0.18",
     "vue-resource": "^0.7.0",
     "vue-router": "^2.3.0"
